--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Samantha Knopper",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
